force-app/main/default/objects/OI_TD_Scan_Data__c/OI_TD_Scan_Data__c.object-meta.xml
<CustomObject>
    <label>OI TD Scan Data</label>
    <pluralLabel>OI TD Scan Data</pluralLabel>
    <nameField>
        <label>OI TD Scan Data Number</label>
        <type>AutoNumber</type>
        <displayFormat>TDD-{0000000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description
  >Chunked JSON payloads captured by a Tech Debt scan (component inventory, usage, dependencies). Stored as large chunks to stay within Developer Edition data storage.</description>
</CustomObject>