force-app/main/default/objects/OI_TD_Scan_Data__c/fields/Data__c.field-meta.xml
<CustomField>
    <fullName>Data__c</fullName>
    <label>Data</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>