force-app/main/default/objects/OI_TD_Scan_Data__c/fields/Kind__c.field-meta.xml
<CustomField>
    <fullName>Kind__c</fullName>
    <label>Kind</label>
    <type>Text</type>
    <length>255</length>
</CustomField>