force-app/main/default/objects/OI_TD_Scan_Data__c/fields/Seq__c.field-meta.xml
<CustomField>
    <fullName>Seq__c</fullName>
    <label>Sequence</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>